[Update] dashboard data view > update interviewer model, functionality, acording model show data in webpage

--- a/templates/admin/client-profile.html
+++ b/templates/admin/client-profile.html
@@ -32,10 +32,10 @@
 					<div class="page-header">
 						<div class="row">
 							<div class="col-sm-12">
-								<h3 class="page-title">Profile</h3>
+								<h3 class="page-title">{{client.username}}</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-									<li class="breadcrumb-item active">Profile</li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
+									<li class="breadcrumb-item active">Client profile</li>
 								</ul>
 							</div>
 						</div>
