--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -35,8 +35,8 @@
                 <div class="col">
                     <h3 class="page-title">Projects</h3>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                        <li class="breadcrumb-item active">Projects</li>
+                            <li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
+                            <li class="breadcrumb-item active">Projects</li>
                     </ul>
                 </div>
                 <div class="col-auto float-right ml-auto">
