--- a/templates/admin/task-nav.html
+++ b/templates/admin/task-nav.html
@@ -17,7 +17,8 @@
 							<div class="col-sm-12">
 								<h3 class="page-title">To view the tasks list, Please select any one project ...</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item active">Dashboard/Projects</li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
+                        			<li class="breadcrumb-item active">Tasks</li>
 								</ul>
 							</div>
 						</div>
