--- a/templates/admin/technology.html
+++ b/templates/admin/technology.html
@@ -16,10 +16,10 @@
 					<div class="page-header">
 						<div class="row align-items-center">
 							<div class="col">
-								<h3 class="page-title">Technologys</h3>
+								<h3 class="page-title">Technology</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-									<li class="breadcrumb-item active">Technologys</li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
+									<li class="breadcrumb-item active">Technology</li>
 								</ul>
 							</div>
 							<div class="col-auto float-right ml-auto">
