--- a/templates/admin/clients.html
+++ b/templates/admin/clients.html
@@ -19,7 +19,7 @@
 							<div class="col">
 								<h3 class="page-title">Clients</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Clients</li>
 								</ul>
 							</div>
