--- a/templates/admin/departments.html
+++ b/templates/admin/departments.html
@@ -18,7 +18,7 @@
 							<div class="col">
 								<h3 class="page-title">Department</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Department</li>
 								</ul>
 							</div>
