--- a/templates/admin/employees.html
+++ b/templates/admin/employees.html
@@ -17,7 +17,7 @@
 							<div class="col">
 								<h3 class="page-title">Employee</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Employee</li>
 								</ul>
 							</div>
