--- a/templates/admin/interviewer_result.html
+++ b/templates/admin/interviewer_result.html
@@ -20,7 +20,7 @@
 						<div class="row align-items-center">
 							<div class="col">
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Interviewer</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminInterviewerDash' %}">Interviewer</a></li>
 									<li class="breadcrumb-item active">Interviewer Result</li>
 								</ul>
 							</div>
