--- a/templates/admin/policies.html
+++ b/templates/admin/policies.html
@@ -18,7 +18,7 @@
 							<div class="col">
 								<h3 class="page-title">Policies</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Policies</li>
 								</ul>
 							</div>
