--- a/templates/admin/profile.html
+++ b/templates/admin/profile.html
@@ -18,7 +18,7 @@
                 <div class="col-sm-12">
                     <h3 class="page-title">Profile</h3>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a> / <a href="{% url 'AdminEmployeeView' %}">Employee</a></li>
                         <li class="breadcrumb-item active">Profile</li>
                     </ul>
                 </div>
