--- a/templates/admin/project-view.html
+++ b/templates/admin/project-view.html
@@ -48,7 +48,7 @@
 							<div class="col">
 								<h3 class="page-title">{{projectdetailview.project_name}}</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'AdminIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Project</li>
 								</ul>
 							</div>
