--- a/templates/interviewer_form.html
+++ b/templates/interviewer_form.html
@@ -1,81 +1,97 @@
 {% extends 'admin/base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
+{% block extra_css %}
+<style>
+    /* Add custom CSS styles here */
+    .form-control {
+        border-radius: 0;
+    }
+    .card {
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+    .submit-section {
+        margin-top: 20px;
+    }
+</style>
+{% endblock extra_css %}
 {% block body %}
-		<!-- Main Wrapper -->
-        <div class="main-wrapper">
-
-			<!-- Page Wrapper -->
-            <div class="page-wrapper">
-
-                <div class="content container-fluid">
-
-					<!-- Page Header -->
-					<div class="page-header">
-						<div class="row">
-							<div class="col">
-								<h3 class="page-title">Interviewer Form</h3>
-							</div>
-						</div>
-					</div>
-					<!-- /Page Header -->
-
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="card">
-								<div class="card-body">
-									 <form action="{% url 'AdminInterviewerForm' %}" method="POST" id="form" enctype="multipart/form-data">
-									 {% csrf_token %}
-										<div class="row">
-											<div class="col-md-4">
-												{{ form.name|as_crispy_field }}
-											</div>
-											<div class="col-md-4">
-												{{form.phone|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.email|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.dob|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.gender|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.address|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.city|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.state|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.experience|as_crispy_field}}
-											</div>
-											<div class="col-md-4">
-												{{form.department|as_crispy_field}}
-											</div>
-											<div class="col-md-4 form-group">
-												{{ form.technology|as_crispy_field }}
-											</div>
-											<div class="col-md-4">
-												{{form.resume|as_crispy_field}}
-											</div>
-										</div>
-										<div class="submit-section">
-											<button class="btn btn-primary submit-btn" type="submit">Submit</button>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- /Main Wrapper -->
-
+<div class="main-wrapper">
+    <div class="page-wrapper">
+        <div class="content container-fluid">
+            <div class="page-header">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="page-title">Interviewer Form</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <form action="{% url 'AdminInterviewerForm' %}" method="POST" id="form" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        {{ form.name|as_crispy_field }}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.email|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.phone|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {{form.dob|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {{form.gender|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {{form.department|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {{ form.technology|as_crispy_field }}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {{form.city|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-3">
+                                        {{form.state|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-12">
+                                        {{form.address|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.experience|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.current_ctc|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.current_salary|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.expected_salary|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.last_company_name|as_crispy_field}}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{form.resume|as_crispy_field}}
+                                    </div>
+                                </div>
+                                <div class="submit-section">
+                                    <button class="btn btn-primary submit-btn" type="submit">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-		<!-- /Main Wrapper -->
+    </div>
+</div>
 {% endblock body %}
