--- a/templates/interviewer_form.html
+++ b/templates/interviewer_form.html
@@ -29,58 +29,90 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="model">
+                        <div class="model-body">
                             <form action="{% url 'AdminInterviewerForm' %}" method="POST" id="form" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-md-6">
-                                        {{ form.name|as_crispy_field }}
+                                        <div class="form-group">
+                                            {{ form.name|as_crispy_field }}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.email|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.email|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.phone|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.phone|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        {{form.dob|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.dob|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        {{form.gender|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.gender|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        {{form.department|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.department|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        {{ form.technology|as_crispy_field }}
+                                        <div class="form-group">
+                                            {{ form.technology|as_crispy_field }}
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        {{form.city|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.city|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-3">
-                                        {{form.state|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.state|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-12">
-                                        {{form.address|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.address|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.experience|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.experience|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.current_ctc|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.current_ctc|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.current_salary|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.current_salary|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.expected_salary|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.expected_salary|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.last_company_name|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.last_company_name|as_crispy_field}}
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
-                                        {{form.resume|as_crispy_field}}
+                                        <div class="form-group">
+                                            {{form.resume|as_crispy_field}}
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="submit-section">
