[Update] Update templates for navbar, chat module template update

--- a/templates/admin/client-profile.html
+++ b/templates/admin/client-profile.html
@@ -16,6 +16,7 @@
 </style>
 
 {% endblock head %}
+{% block nav %}{% include 'admin/navigationpanel.html' %}{% endblock nav %}
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
