--- a/templates/admin/leaves.html
+++ b/templates/admin/leaves.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block body %}
-
+{% block nav %}{% include 'admin/navigationpanel.html' %}{% endblock nav %}
 <!-- Page Wrapper -->
 <div class="page-wrapper">
     <div class="show_message">
