--- a/templates/admin/project-view.html
+++ b/templates/admin/project-view.html
@@ -29,7 +29,8 @@
 
 </style>
 
-{% endblock head %}FR
+{% endblock head %}
+{% block nav %}{% include 'admin/navigationpanel.html' %}{% endblock nav %}
 {% block body %}
 
 			<!-- Page Wrapper -->
