--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -125,7 +125,7 @@
 		</div>
 		<!-- /Header -->
 
-		{% include 'admin/navigationpanel.html' %}
+		{% block nav %}{% endblock nav %}
         {% block body %} {% endblock body %}
 
 
