--- a/templates/admin/tasks.html
+++ b/templates/admin/tasks.html
@@ -7,7 +7,7 @@
     <div class="sidebar-inner slimscroll">
         <div class="sidebar-menu">
             <ul>
-                <li><a href="{% url 'AdminProjectTask' %}"><span>Project List</span></a></li>
+                <li><a href="{% url 'AdminIndex' %}"><span>Back to home</span></a></li>
                 <li class="menu-title">Projects</li>
                 {% for project in projectlist %}
                 <li><a href="{% url 'AdminProjectTaskList' project.id %}"><span>{{project.project_name}}</span></a></li>
@@ -33,9 +33,7 @@
                         <div class="fixed-header">
                             <div class="navbar">
                                 <div class="add-task-btn-wrapper float-left mr-auto">
-                                    <button class="add-task-btn btn btn-white btn-sm" onclick="addTask({{project_id}})">
-                                        <i class="las la-plus"></i>Add Task
-                                    </button>
+                                    <button class="add-task-btn btn btn-white btn-sm" onclick="addTask({{project_id}})"><i class="las la-plus"></i> <span>Add Task</span></button>
                                 </div>
                                 <ul class="nav custom-menu float-right">
                                     <li class="nav-item dropdown dropdown-action">
