--- a/templates/admin/tickets.html
+++ b/templates/admin/tickets.html
@@ -1,7 +1,7 @@
 {% extends 'admin/base.html' %}
 {% load static %}
 {% block body %}
-
+{% block nav %}{% include 'admin/navigationpanel.html' %}{% endblock nav %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
 				<div class="show_message">
