--- a/templates/admin/tasks.html
+++ b/templates/admin/tasks.html
@@ -7,7 +7,7 @@
     <div class="sidebar-inner slimscroll">
         <div class="sidebar-menu">
             <ul>
-                <li><a href="{% url 'AdminIndex' %}"><span>Back to home</span></a></li>
+                <li><a href="{% url 'AdminIndex' %}"><i class="la la-home"></i><span>Back to home</span></a></li>
                 <li class="menu-title">Projects</li>
                 {% for project in projectlist %}
                 <li><a href="{% url 'AdminProjectTaskList' project.id %}"><span>{{project.project_name}}</span></a></li>
@@ -30,6 +30,7 @@
             <div class="chat-main-wrapper">
                 <div class="col-lg-7 message-view task-view task-left-sidebar">
                     <div class="chat-window">
+                        {% if project_tasklist %}
                         <div class="fixed-header">
                             <div class="navbar">
                                 <div class="add-task-btn-wrapper float-left mr-auto">
@@ -48,6 +49,7 @@
                                 </ul>
                             </div>
                         </div>
+                        {% endif %}
                         <div class="show_message">
                             {% for message in messages %}
                                 <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
