[Update] chat module in employee side

--- a/templates/employee/navigationpanel.html
+++ b/templates/employee/navigationpanel.html
@@ -98,7 +98,7 @@
                 <li><a href="{% url 'EmpDesignationView' %}"><i class="lab la-buffer"></i><span>Designation</span></a></li>
                 <li><a href="{% url 'EmpTechnologyView' %}"><i class="las la-code"></i><span>Technology</span></a></li>
                 <li><a href="{% url 'EmpTickets' user.id %}"><i class="la la-ticket"></i> <span>Tickets</span></a></li>
-                <li><a href="{% url 'EmpChatView' user.id %}"><i class="las la-comments"></i><span>Chat</span></a></li>
+                <li><a href="{% url 'EmpChatView' %}"><i class="las la-comments"></i><span>Chat</span></a></li>
                 <li class="menu-title"><span>Project</span></li>
                 <li><a href="{% url 'EmpProjectsView' user.id %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
                 <li><a href="{% url 'EmpProjectTask' user.id %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
