--- a/templates/admin/attendance.html
+++ b/templates/admin/attendance.html
@@ -45,35 +45,44 @@
 								<label class="focus-label">Department</label>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-2">
+						<div class="col-sm-6 col-md-1">
 							<div class="form-group form-focus select-focus">
-								<select class="form-control floating" id="month_search">
+								<select class="form-control floating" id="day_search">
 									<option value="">---</option>
-									<option>Jan</option>
-									<option>Feb</option>
-									<option>Mar</option>
-									<option>Apr</option>
-									<option>May</option>
-									<option>Jun</option>
-									<option>Jul</option>
-									<option>Aug</option>
-									<option>Sep</option>
-									<option>Oct</option>
-									<option>Nov</option>
-									<option>Dec</option>
+									{% for i in day_range %}
+									<option>{{i}}</option>
+									{% endfor %}
 								</select>
-								<label class="focus-label">Select Month</label>
+								<label class="focus-label">Select Day</label>
 							</div>
 						</div>
 						<div class="col-sm-6 col-md-2">
 							<div class="form-group form-focus select-focus">
+								<select class="form-control floating" id="month_search">
+									<option value="">---</option>
+									<option value="Jan">January</option>
+									<option value="Feb">February</option>
+									<option value="Mar">March</option>
+									<option value="Apr">April</option>
+									<option value="May">May</option>
+									<option value="Jun">June</option>
+									<option value="Jul">July</option>
+									<option value="Aug">Auguste</option>
+									<option value="Sep">September</option>
+									<option value="Oct">October</option>
+									<option value="Nov">November</option>
+									<option value="Dec">December</option>
+								</select>
+								<label class="focus-label">Select Month</label>
+							</div>
+						</div>
+						<div class="col-sm-6 col-md-1">
+							<div class="form-group form-focus select-focus">
 								<select class="form-control floating" id="year_search">
 									<option value="">---</option>
-									<option>2024</option>
-									<option>2023</option>
-									<option>2022</option>
-									<option>2021</option>
-									<option>2020</option>
+									{% for i in year_range %}
+									<option>{{i}}</option>
+									{% endfor %}
 								</select>
 								<label class="focus-label">Select Year</label>
 							</div>
@@ -99,6 +108,9 @@
 									<thead>
 										<tr>
 											<th>Name</th>
+											<th hidden>Day</th>
+											<th hidden>Month</th>
+											<th hidden>Year</th>
 											<th>Date</th>
 											<th>Punch In</th>
 											<th>Punch Out</th>
@@ -118,6 +130,9 @@
 													<a href="{% url 'AdminProfileView' attendee.attendee_user.id %}">{{attendee.attendee_user.username}} <span>{{attendee.attendee_user.designation}} | {{attendee.attendee_user.technology}}</span></a>
 												</h2>
 											</td>
+											<td hidden>{{attendee.date|date:'j'}}</td>
+											<td hidden>{{attendee.date|date:'M'}}</td>
+											<td hidden>{{attendee.date|date:'Y'}}</td>
 											<td>{{attendee.date|date:'j - M - Y'}}</td>
 											<td>{{attendee.check_in_time|date:'h : i A'}}</td>
 											<td>{{attendee.check_out_time|date:'h : i A'}}</td>
@@ -165,9 +180,12 @@ $(document).ready(function () {
 		table.column(6).search(this.value).draw();
 	});
 	$('#year_search').on('change', function () {
-		table.column(1).search(this.value).draw();
+		table.column(3).search(this.value).draw();
 	});
 	 $('#month_search').on('change', function () {
+		table.column(2).search(this.value).draw();
+	});
+	 $('#day_search').on('change', function () {
 		table.column(1).search(this.value).draw();
 	});
 
