[ADd] employee salary and find the way how calculate and show data

--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -14,6 +14,7 @@
                 <li><a href="{% url 'AdminDepartmentView' %}" class="{% if url_name == 'AdminDepartmentView' %}text-white{% endif %}"><i class="las la-building"></i><span>Department</span></a></li>
                 <li><a href="{% url 'AdminDesignationView' %}" class="{% if url_name == 'AdminDesignationView' %}text-white{% endif %}"><i class="lab la-buffer"></i><span>Designation</span></a></li>
                 <li><a href="{% url 'AdminTechnologyView' %}" class="{% if url_name == 'AdminTechnologyView' %}text-white{% endif %}"><i class="las la-code"></i><span>Technology</span></a></li>
+                <li><a href="{% url 'AdminEmployeeSalaryView' %}" class="{% if url_name == 'AdminEmployeeSalaryView' %}text-white{% endif %}"><i class="las la-money-bill-alt"></i><span>Employee Salary Slip</span></a></li>
                 <li><a href="{% url 'AdminTicketList' %}" class="{% if url_name == 'AdminTicketList' %}text-white{% endif %}"><i class="la la-ticket"></i> <span>Tickets</span></a></li>
                 <li><a href="{% url 'AdminChatView' %}" class="{% if url_name == 'AdminChatView' %}text-white{% endif %}"><i class="las la-comments"></i><span>Chat</span></a></li>
                 <li><a href="{% url 'AdminClientsView' %}" class="{% if url_name == 'AdminClientsView' %}text-white{% endif %}"><i class="las la-handshake"></i><span>Clients</span></a></li>
