--- a/templates/employee/navigationpanel.html
+++ b/templates/employee/navigationpanel.html
@@ -97,6 +97,7 @@
                 <li><a href="{% url 'EmpDepartmentView' %}"><i class="las la-building"></i><span>Departments</span></a></li>
                 <li><a href="{% url 'EmpDesignationView' %}"><i class="lab la-buffer"></i><span>Designation</span></a></li>
                 <li><a href="{% url 'EmpTechnologyView' %}"><i class="las la-code"></i><span>Technology</span></a></li>
+                <li><a href="{% url 'EmpSalarySlip' %}"><i class="las la-money-bill-alt"></i><span>Salary Slip</span></a></li>
                 <li><a href="{% url 'EmpTickets' user.id %}"><i class="la la-ticket"></i> <span>Tickets</span></a></li>
                 <li><a href="{% url 'EmpChatView' user.id %}"><i class="las la-comments"></i><span>Chat</span></a></li>
                 <li class="menu-title"><span>Project</span></li>
